docs(use-cases): add use-case index and overtime utilization golden path

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,3 +25,6 @@ nav:
       - Accruals: domains/accruals.md
       - ESS / Workflow: domains/ess.md
       - Forecasting: domains/forecasting.md
+  - Use Cases:
+      - Index: use-cases/index.md
+      - Overtime Utilization: use-cases/overtime-utilization.md
