--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ plugins:
   - search
 nav:
   - Home: index.md
+  - Report Catalog: report-catalog.md
   - Getting Started:
       - Quickstart: getting-started/quickstart.md
     - Concepts:
