--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
       - Index: use-cases/index.md
       - Overtime Utilization: use-cases/overtime-utilization.md
       - Schedule vs Worked Variance: use-cases/schedule-vs-worked.md
+      - Approval Cycle Time: use-cases/approval-cycle-time.md
   - Roles:
       - Analyst: roles/analyst.md
       - Engineer: roles/engineer.md
