--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,8 @@ nav:
       - Accruals: domains/accruals.md
       - ESS / Workflow: domains/ess.md
       - Forecasting: domains/forecasting.md
+  - Entities:
+      - Index: entities/index.md      
   - Use Cases:
       - Index: use-cases/index.md
       - Overtime Utilization: use-cases/overtime-utilization.md
